[UPDATE] cors's test